--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
         right: 0;
         bottom: 0;
         background-color: #f96302;
+        background: url('./assets/img/home_depot_back.jpg');
+        filter: blur(20px);
+        background-repeat: no-repeat;
+        background-size: cover;
         z-index: 99999;
         pointer-events: none;
       }
